--- a/src/components/Home/table/expenseTable.css
+++ b/src/components/Home/table/expenseTable.css
@@ -1,26 +1,34 @@
-table {
-    width: 100%;
+.table-expense {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    margin: auto;
+    align-items: center;
+    
 }
 
-.table-header {
-    display: flex;
-    justify-content: center;
+.table-header, .table-data {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     box-sizing: border-box;
-    width: 58%;
+    width: 60%;
     height: 50px;
     margin-top: 20px;
     border: 1px solid rgba(128, 128, 128, 0.281);
 }
 
-.table-header th, td {
+.table-header {
+    font-weight: 700;
+}
+
+.table-data {
+    margin-top: 5px;
+}
+
+.table-header div,
+.table-data div {
     background-color: whitesmoke;
     box-sizing: border-box;
     text-align: left;
-    min-width: 250px;
     height: 30px;
     padding: 0 4px;
 }
@@ -29,7 +37,7 @@ table {
     display: flex;
     justify-content: flex-end;
     margin-top: 10px;
-    width: 80%;
+    width: 60%;
 }
 
 .btn-table {
