--- a/src/components/table/expenseTable.css
+++ b/src/components/table/expenseTable.css
@@ -13,7 +13,7 @@
     width: 60%;
     height: 50px;
     margin-top: 20px;
-    border: 1px solid rgba(128, 128, 128, 0.281);
+    border-bottom: 1px solid rgba(128, 128, 128, 0.281);
 }
 
 .table-header {
