--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -1,11 +1,14 @@
 
-
-.container {
+.organizationModal{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.13);
+    top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    position: absolute;
+    overflow: hidden;
 }
 
 .form-modal {
@@ -33,7 +36,7 @@
 .form-modal input {
     width: 250px;
     height: 24px;
-    border-bottom: 1px dashed gray;
+    border-bottom: 1px solid gray;
 }
 
 .modal-close {
