--- a/src/components/table/expenseTable.css
+++ b/src/components/table/expenseTable.css
@@ -1,38 +1,21 @@
-.table-expense {
+.organizationTable{
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    gap: 20px;
 }
-
-.table-header, .table-data {
-    display: grid;
-    align-items: center;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    box-sizing: border-box;
-    width: 60%;
-    height: 50px;
-    margin-top: 20px;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.281);
+th{
+    color:rgb(83, 83, 83);
 }
-
-.table-header {
-    font-weight: 700;
+th, td{
+    padding: 15px;
+    text-align: start;
+    border-bottom:1px solid rgb(221, 221, 221);
 }
-
-.table-data {
-    margin-top: 5px;
+table{
+    width:60%;
 }
-
-.table-header div,
-.table-data div {
-    background-color: whitesmoke;
-    box-sizing: border-box;
-    text-align: left;
-    height: 30px;
-    padding: 0 4px;
-}
-
 .div-btn-table {
     display: flex;
     justify-content: flex-end;
