--- a/src/components/modalUser/style.css
+++ b/src/components/modalUser/style.css
@@ -1,13 +1,15 @@
 
-.container{
+.modalContainer{
     width: 100vw;
     height: 100vh;
     position: fixed;
-    background: rgba(0, 0, 0, 0.5);
-    top: 0;
-    display: flex;
-    align-items: center;
     overflow: hidden;
+    top: 0;
+    left: 0;
+    background-color: #93939599;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-modal {
@@ -16,7 +18,7 @@
     box-sizing: border-box;
     background: #fff;
     width: 450px;
-    height: 350px;
+    height: 400px;
     border-radius: 8px;
     padding: 30px 70px;
     gap: 5px;
